tests/baselines/reference/rangeTypeDeclaration.errors.txt
tests/cases/compiler/rangeTypeDeclaration.ts(4,5): error TS2322: Type 'number' is not assignable to type '(<= 4.5)'.
tests/cases/compiler/rangeTypeDeclaration.ts(8,5): error TS2322: Type '1.2' is not assignable to type '(> 1.2)'.
tests/cases/compiler/rangeTypeDeclaration.ts(9,5): error TS2322: Type '1.2' is not assignable to type '(< 1.2)'.
tests/cases/compiler/rangeTypeDeclaration.ts(10,5): error TS2322: Type '-1' is not assignable to type '(>= 0)'.
tests/cases/compiler/rangeTypeDeclaration.ts(11,5): error TS2322: Type '42' is not assignable to type '(< 0)'.
tests/cases/compiler/rangeTypeDeclaration.ts(29,5): error TS2322: Type 'D.bar' is not assignable to type '(<= 0)'.


==== tests/cases/compiler/rangeTypeDeclaration.ts (6 errors) ====
    let a1: (> -1) = 0;
    let a2: (< 1) = -10;
    let a4: (> 0.1) = 0.5;
    let a5: (<= 4.5) = Math.E;
        ~~
!!! error TS2322: Type 'number' is not assignable to type '(<= 4.5)'.
    let a6: (>= -4) = 1.5;
    let a7: (>= 2) = 2;
    
    let b1: (> 1.2) = 1.2;
        ~~
!!! error TS2322: Type '1.2' is not assignable to type '(> 1.2)'.
    let b2: (< 1.2) = 1.2;
        ~~
!!! error TS2322: Type '1.2' is not assignable to type '(< 1.2)'.
    let b3: (>= 0) = -1;
        ~~
!!! error TS2322: Type '-1' is not assignable to type '(>= 0)'.
    let b4: (< 0) = 42;
        ~~
!!! error TS2322: Type '42' is not assignable to type '(< 0)'.
    
    enum C {
        foo,
        bar
    }
    
    let c1: (>= 0) = C.foo;
    let c2: C = <C>c1;
    
    const enum D {
        foo,
        bar
    }
    
    let d1: (>= 0) = D.foo;
    let d2: (<= 0) = D.foo;
    
    let d3: (<= 0) = D.bar;
        ~~
!!! error TS2322: Type 'D.bar' is not assignable to type '(<= 0)'.
    